--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".ui.main.home.HomeFragment">
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btnButtomShet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show bottom sheet"
+        android:layout_centerInParent="true"/>
+
+    <Button
+        android:id="@+id/btnDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show dialog"
+        android:layout_below="@+id/btnButtomShet"
+        android:layout_centerInParent="true"/>
+
+</RelativeLayout>
