--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.PolyFriend" parent="Theme.Material3.DayNight.NoActionBar">
 <!--        <item name="android:windowTranslucentStatus">true</item>-->
 <!--        <item name="android:windowTranslucentNavigation">true</item>-->
+        <item name="android:textColor">#66707A</item>
 
         <item name="colorPrimary">@color/red_light</item>
         <item name="colorPrimaryVariant">@color/red_light</item>
@@ -14,6 +15,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/background</item>
         <item name="android:windowLightStatusBar">true</item>
+<!--        -->
     </style>
 
     <style name="Theme.PolyFriend" parent="Base.Theme.PolyFriend" />
